<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/cover_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/city_1"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/date_text_view"
                style="@style/MediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_date"
                android:textColor="#FFFFFF"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:paddingLeft="@dimen/margin_8dp"
                android:paddingRight="@dimen/margin_8dp"
                android:background="@color/black"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:weightSum="4"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_8dp">

            <TextView
                android:id="@+id/quotes_text_view"
                style="@style/LargeText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:text="@string/placeholder_quotes"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="12">

                <TextView
                    android:id="@+id/author_text_view"
                    style="@style/MediumText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="11"
                    android:text="@string/placeholder_author"/>

                <Button
                    android:id="@+id/setting_button"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:layout_gravity="bottom"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>